--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <title>Namaste React</title>
-  </head>
-  <body>
-    <div id="root"></div>
 
-    <script type="module" src="./src/App.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="stylesheet" href="./src/style.css">
+  <title>Namaste React</title>
+</head>
 
-    <!-- Normal script files are intended to run directly but the modules are meant to be imported. SO whenever we use import or export the script
+<body class="font-sans">
+  <div id="root"></div>
+
+  <script type="module" src="./src/App.js"></script>
+
+  <!-- Normal script files are intended to run directly but the modules are meant to be imported. SO whenever we use import or export the script
     should be of the type "module". -->
-  </body>
+</body>
+
 </html>
